kubernetes/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://192.168.122.163"
spec:
  ingressClassName: nginx
  rules:
    - host: react-fastapi-website.com
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: react-service
                port:
                  number: 5173
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fastapi-service
                port:
                  number: 8000
